templates/welcome-api_template.yaml
---
# Source: welcome-api/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
# Source: welcome-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-api-service
  namespace: backend
spec:
  selector:
    app: welcome-api
  ports:
    - port: 80
      targetPort: 5001
  type: ClusterIP
---
# Source: welcome-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-api-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome-api
  template:
    metadata:
      labels:
        app: welcome-api
    spec:
      containers:
        - name: welcome-api
          image: lucassandin/welcome-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
---
# Source: welcome-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-api-ingress
  namespace: backend
spec:
  ingressClassName: nginx
  rules:
    - host: api.34.67.168.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-api-service
                port:
                  number: 80
